frontend/samoim/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: samoim-front-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "samoim.kbfg.kubepia.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samoim-front-service
            port:
              number: 8080
